# blindcoder

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  config.example.toml  flake.nix  opencode.jsonc
crates/alias/: Cargo.toml
crates/alias/src/: lib.rs
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  proxy.rs  rewrite.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/selector/: Cargo.toml
crates/selector/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  schema.sql
docs/: design.md
docs/specs/: clippy-stringency.md  rating-prompt-guidance.md  stats-subcommand.md
src/: main.rs  run.rs  simulate.rs  stats.rs
