[package]
name = "blindcoder"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A blind, cost/quality-aware router for agentic coding CLIs."
repository = "https://github.com/SBhojani/blindcoder"
rust-version = "1.74"

[[bin]]
name = "blindcoder"
path = "src/main.rs"

[workspace]
members = ["crates/selector", "crates/config", "crates/alias", "crates/store", "crates/backend"]

[dependencies]
selector = { path = "crates/selector" }
config = { path = "crates/config" }
alias = { path = "crates/alias" }
store = { path = "crates/store" }
backend = { path = "crates/backend" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
rand_distr = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "process"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
uninlined_format_args = "warn"
map_unwrap_or = "warn"
explicit_iter_loop = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"
needless_pass_by_value = "warn"

[lints]
workspace = true
