[package]
name = "backend"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "blindcoder backend seam: the Backend transport trait (grows from a trivial proxy into the full tee)."

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
