[package]
name = "backend"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "blindcoder backend seam: the Backend transport trait (grows from a trivial proxy into the full tee)."

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"
bytes = "1"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
