[package]
name = "config"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "blindcoder configuration: TOML with flag > env > file > default precedence."

[dependencies]
selector = { path = "../selector" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
