[package]
name = "selector"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "blindcoder selector: cost/quality-aware Thompson-sampling model chooser (the permanent decision core)."

[dependencies]
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
